discussion/kv_engine/188207/188207_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for using castore in test programs

Change-Id: I0378daea2d2e043c22f7e540328e34ab6a37f05d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-15 12:00:20.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-15 12:32:19.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52404/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52404/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43958/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/parse_tls_option.cc:27:14:
error: no member named "cerr" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43958/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22945/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:27:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << TerminalColor::Red
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:41:18: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
            std::cerr << TerminalColor::Red << descr << " file " << file
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22945/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:27:14:
error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22945/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12677/ : FAILURE

Compile error at [2023-03-15T12:05:17.578Z] ../kv_engine/programs/parse_tls_option.cc:27:14:
error: no member named "cerr" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12677/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23215/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1751/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25009/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25471/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26325/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33427/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12758/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24595/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
